syntax = "proto3";
package pathways;

option java_package = "org.mobilitydata.gtfsproto";
option java_outer_classname = "PathwaysProto";

message Pathway {
    string pathwayId = 1;
    string fromStopId = 2;
    string toStopId = 3;

    enum PathwayMode {
        RESERVED = 0; //First enum value must be 0 in proto3
        WALKWAY = 1;
        STAIRS = 2;
        MOVING_SIDEWALK_TRAVELATOR = 3;
        ESCALATOR = 4;
        ELEVATOR = 5;
        FARE_GATE = 6;
        EXIT_GATE = 7;
    }
    PathwayMode pathwayMode = 4;

    enum IsBidirectional {
        FALSE = 0; //First enum value must be 0 in proto3
        TRUE = 1;
    }
    IsBidirectional is_bidirectional = 5;

    float length = 6;
    uint32 traversalTime = 7;
    int32 stairCount = 8;
    float maxSlope = 9;
    float minWidth = 10; //must be positive
    string signpostedAs = 11;
    string reversedSignpostedAs = 12;
}

message pathwayCollection {
    repeated Pathway pathways = 1;
}