syntax = "proto3";
package stoptimes;

option java_package = "org.mobilitydata.gtfsproto";
option java_outer_classname = "StopTimesProto";

message StopTime {
    string tripId = 1;
    string arrivalTime = 2;
    string departureTime = 3;
    string stopId = 4;
    uint32 stopSequence = 5;
    string stopHeadsign = 6;

    enum PickupDropOffType {
        REGULAR = 0;
        NONE = 1;
        AGENCY = 2;
        DRIVER = 3;
    }
    PickupDropOffType pickupType = 7;
    PickupDropOffType dropOffType = 8;

    float shapeDistTraveled = 9;

    enum TimePrecision {
        APPROXIMATE = 0;
        EXACT = 1;
    }

    TimePrecision timepoint = 10;
}

message stopTimeCollection {
    repeated StopTime stopTimes = 1;
}